--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body
     align-items: center;
     flex-direction: column;
 }
-.btn1, .btn2
+.btn1, .btn2, .btn3
 {
     width: 200px;
     height: 50px;
@@ -25,7 +25,7 @@ body
     font-size: 25px;
     cursor: pointer;
     border-radius: 10px;
-    border-color: blue;
+    border: 2px solid blue;
     color: blue;
     font-weight: 600;
     position: relative;
@@ -74,4 +74,38 @@ body
 .btn1:hover, .btn2:hover
 {
     color: white;
+    border: 2px groove white;
+}
+
+.btn3::after
+{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgb(20, 106, 177);
+    position: absolute;
+    z-index: -1;
+    transform: translateX(-76%) translateY(-72%);
+    transition: 0.8s all ease;
+}
+.btn3{color: white;}
+.btn3:hover{color: blue;}
+.btn3::before
+{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgb(20, 106, 177);
+    position: absolute;
+    z-index: -1;
+    transform: translateX(-24%) translateY(28%);
+    transition: 1.5s all ease;
+}
+.btn3:hover::after
+{
+    transform: translate(-11px, -160px);
+}
+.btn3:hover::before
+{
+    transform: translate(-11px, 126px);
 }
